# qf621_hft

./: .gitignore  CMakeLists.txt  QF621_HFT project.docx  README.md  aapl_oneex.ipynb  compare_dates.py  compare_exchanges.py  main.py  main.sh  main_1.sh  main_2.sh  market_data.ipynb  one_batch_example.ipynb  requirements.txt  test.py  test1.py  verify_bid_ask_consistency.py  visualisation_nb.ipynb
analysis_results/: summary_analysis.txt
data/: filtered_tickers.txt  positive_return_tickers.txt  positive_return_tickers_v1.txt  positive_return_tickers_v2.txt
include/: config.hpp  orderbook.hpp  parser.hpp  portfolio.hpp  strategy.hpp
src/: analyze_logs.py  backtest_parser.py  data_loader.py  logger_config.py  main.cpp  orderbook.cpp  parser.cpp  performance.py  plot.py  portfolio.cpp  results_analyzer.py  select_spy_tickers.py  strategy.cpp  strategy.py  wrds_pull.py
src/strats/: inverse_obi.py  mean_reversion.py  obi.py
